1.2.1 range参数设置错误(C方案之前命名为B，重复参数方案名设置，优化任意参数类型生成数值列表) self() 新方法，返回当前魔咒，可用于递归